--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "imagemin": "^5.3.1",
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-pngquant": "^5.0.1",
     "jsonwebtoken": "^8.1.0",
     "mocha": "^3.5.0",
     "mongoose": "^4.9.10",
     "mongoose-beautiful-unique-validation": "^7.0.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "node-fetch": "^1.7.3",
+    "uuid": "^3.1.0"
   }
 }
