--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   },
   "homepage": "https://gitlab.com/trellio/backend#README",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^4.0.1"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt-as-promised": "^1.1.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -39,7 +40,6 @@
     "imagemin-jpeg-recompress": "^5.1.0",
     "imagemin-pngquant": "^5.0.1",
     "jsonwebtoken": "^8.1.0",
-    "mocha": "^3.5.0",
     "mongoose": "^4.9.10",
     "mongoose-beautiful-unique-validation": "^7.0.0",
     "morgan": "^1.9.0",
