--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node_modules/.bin/babel-node server.js",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000",
+    "test-staging": "NODE_ENV=staging ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000"
   },
   "repository": {
     "type": "git",
