--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "google-auth-library": "^0.11.0",
     "imagemin": "^5.3.1",
     "imagemin-jpeg-recompress": "^5.1.0",
     "imagemin-pngquant": "^5.0.1",
