--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node_modules/.bin/babel-node server.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000",
-    "test-staging": "NODE_ENV=staging ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000"
+    "test-staging": "NODE_ENV=staging ./node_modules/.bin/mocha --require babel-register --require babel-polyfill --timeout 10000",
+    "lint": "./node_modules/.bin/eslint .",
+    "lint-fix": "./node_modules/.bin/eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,11 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "mocha": "^3.5.3"
   },
   "dependencies": {
